--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,32 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+//buildscript里的是gradle脚本执行所需依赖，分别是对应的maven库和插件。
+//allprojects里是项目本身需要的依赖，比如要添加maven中的的common-util库，那么应该将
+//maven {url ‘https://raw.githubusercontent.com/Geroff/MavenTest/master’}写在这里，而不是buildscript中，不然找不到。
+
+
+
+//google()：
+//依赖的是google公司自己的依赖
+//
+//jcenter()：
+//由JFrog公司提供的Bintray中的Java仓库。它是当前世界上最大的Java和Android开源
+//软件构件仓库。
+//
+//maven：
+//由Sonatype公司提供的服务，它是Apache Maven、SBT和其他构建系统的默认仓库。
+
+
 
 buildscript {
     repositories {
-        google()
-        jcenter()
+//        google()
+//        jcenter()
+        maven {url 'https://maven.aliyun.com/repository/jcenter'}
+        maven {url 'https://maven.aliyun.com/repository/google'}
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
