--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".annotations_fanshe.AnnotationTestActivity"></activity>
+        <activity android:name=".shejimoshi.agent.AgentActivity"></activity>
         <activity android:name=".annotations_fanshe.AnnotationIntentActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".shejimoshi.agent.AgentActivity">
+        <activity android:name=".annotations_fanshe.AnnotationTestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <!-- 避免警告 -->
